if (UseCrashReporter)
    casa_add_executable (NONE CrashReportPoster apps/reporter/CrashReportPoster.cc ${Breakpad_IncludeRoot}/common/linux/http_upload.cc)
    target_link_libraries (CrashReportPoster -ldl)
    target_include_directories (CrashReportPoster PUBLIC ${Breakpad_IncludeRoot})
endif ()
